--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
       </div>
       <div class="section">
           <h2>How Does This Work?</h2>
-          <p>It uses the WebAudio API, WebAssembly, and some fairy dust. Files are processed client-side, which means that your audio does not get sent to any servers. If you want to know more, the source code is on GitHub.</p>
+          <p>It uses the WebAudio API, WebAssembly, and some fairy dust. Files are processed client-side, which means that your audio does not get sent to any servers. If you want to know more, the source code is on <a href="https://github.com/YYUUGGOO/repitch">GitHub</a>.</p>
       </div>
       <div class="section 5">
           <h2>What Do I Do With The Files?</h2>
