--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
     <a id="downloadLink" style="display: none;">Download </a>
     </div>
     <div class="options">
+      <div class="items">
         <div class="fidelity">
           <p><b>Fidelity</b></p>
         <div>
@@ -50,8 +51,20 @@
             <input type="radio" id="4x" name="speed" value="4x" />
             <label for="4x">4x</label>
           </div>
+        </div>
+        <div class="channels">
+          <p><b>Channels</b></p>
+          <div>
+            <input type="radio" id="2" name="channels" value="2" checked/>
+            <label for="2">Stereo</label>
+          </div>
+          <div>
+            <input type="radio" id="1" name="channels" value="1"/>
+            <label for="1">Mono</label>
+          </div>
 
         </div>
+      </div>
     </div>
 
 
