--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
       </div>
       <div class="section">
           <h2>What Do The Options Mean?</h2>
-          <p>Fidelity sets, well, the fidelity of the output. You can choose between CD Quality (46kHz 16 Bit) and simulations of old samplers such as the Emu SP-1200 (26kHz 12 Bit) or Casio SK-1 (9kHz 8 Bit). Speed sets the speed of the output.</p>
+          <p>Fidelity sets, well, the fidelity of the output. You can choose between CD Quality (46kHz 16 Bit) and simulations of old samplers such as the Emu SP-1200 (26kHz 12 Bit) or Casio SK-1 (9kHz 8 Bit). Speed sets the speed of the outpu and Channels sets the output channels.</p>
       </div>
   
       <div class="section 3">
