wasm 0.7.0 has breaking changes. specified 0.6.4

--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
 </html>
 
 <script src="https://cdn.jsdelivr.net/npm/darkmode-js@1.5.7/lib/darkmode-js.min.js"></script>
-<script src="https://unpkg.com/wasm-media-encoders/dist/umd/WasmMediaEncoder.min.js"></script>
+<script src="https://unpkg.com/wasm-media-encoders@0.6.4/dist/umd/WasmMediaEncoder.min.js"></script>
 <script src="script.js"></script>
 <script>
   function addDarkmodeWidget() {
