Changed Encoding to Wav to mitigate issue #1

--- a/index.html
+++ b/index.html
@@ -117,6 +117,9 @@
 </html>
 
 <script src="https://cdn.jsdelivr.net/npm/darkmode-js@1.5.7/lib/darkmode-js.min.js"></script>
+<script src="
+https://cdn.jsdelivr.net/npm/lamejs@1.2.1/lame.min.js
+"></script>
 <script src="https://unpkg.com/wasm-media-encoders@0.6.4/dist/umd/WasmMediaEncoder.min.js"></script>
 <script src="script.js"></script>
 <script>
