--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Re:Pitch</title>
     <link rel="stylesheet" href="style.css">
     <link rel="manifest" href="/manifest.json">
-    <meta name="theme-color" content="#000000">
+    <meta name="theme-color" content="#fff">
 </head>
 
 <body>
