--- a/index.html
+++ b/index.html
@@ -222,12 +222,12 @@
       </div>
       <div class="section">
           <h2>Who Are You?</h2>
-          <p>My name is David, but I go by Palm and Yūgo. I'm an indie artist mainly doing lo-fi but also other kinds of music. If you want to know more, you can check out my website at <a href="https://yuugo.art">yuugo.art</a></p>
+          <p>My name is David, but I go by Palm and Yūgo. I'm an indie artist mainly doing lo-fi but also other kinds of music. If you want to know more, you can check out my website at <a href="https://yuugo.xyz">yuugo.xyz</a></p>
       </div>
   </div>
   
     <div class="footer">
-        <p>Made by <a href="https://yuugo.art">Yūgo</a> <br> Darkmode by <a href="https://darkmodejs.learn.uno/">Darkroom.js</a></p>
+        <p>Made by <a href="https://yuugo.xyz">Yūgo</a> <br> Darkmode by <a href="https://darkmodejs.learn.uno/">Darkroom.js</a></p>
     </div>
 </body>
 
