Update footer credits in index.html

--- a/index.html
+++ b/index.html
@@ -227,7 +227,7 @@
   </div>
   
     <div class="footer">
-        <p>Made by <a href="https://yuugo.xyz">Yūgo</a> <br> Darkmode by <a href="https://darkmodejs.learn.uno/">Darkroom.js</a></p>
+        <p>Made by <a href="https://yuugo.xyz">Yūgo</a> with massive help from <a href="https://brianholt.ca/">Brian Holt</a> <br> Darkmode by <a href="https://darkmodejs.learn.uno/">Darkroom.js</a></p>
     </div>
 </body>
 
