Fix typo in fidelity description paragraph

--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@
       </div>
       <div class="section">
           <h2>What Do The Options Mean?</h2>
-          <p>Fidelity sets, well, the fidelity of the output. You can choose between CD Quality (46kHz 16 Bit) and approximations of old samplers such as the Emu SP-1200 (26kHz 12 Bit)* or Casio SK-1 (9kHz 8 Bit). Speed sets the speed of the outpu and Channels sets the output channels. <br><br>*Due to lack of 12 Bit support in WAV files there are two options for the SP-1200 simulation.</p>
+          <p>Fidelity sets, well, the fidelity of the output. You can choose between CD Quality (46kHz 16 Bit) and approximations of old samplers such as the Emu SP-1200 (26kHz 12 Bit)* or Casio SK-1 (9kHz 8 Bit). Speed sets the speed of the output and Channels sets the output channels. <br><br>*Due to lack of 12 Bit support in WAV files there are two options for the SP-1200 simulation.</p>
       </div>
   
       <div class="section 3">
